--- a/src/bigvideobox.css
+++ b/src/bigvideobox.css
@@ -1,9 +1,13 @@
 .bigBox{
     width: 100%;
-    height: 60vh;
+    height: auto;
     /* background-color: red; */
     padding: 0 30px;
     
+}
+
+.Mainvideos2{
+    height: auto;
 }
 
 .videoBox{
@@ -30,25 +34,37 @@
 
 .videos{
     width: 18%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: start;
     /* background-color: red; */
 }
 
-.vidImage{
+.videoImage video{
     width: 100%;
-    height: 60%;
-    border: solid 1px rgb(37, 35, 35);
-    margin-bottom: 2%;
+    height: 100%;
+    margin-bottom: 80px;
 }
 
+.videoImage {
+    width: 100%;
+    height: 40vh; 
+    border: solid 1px rgb(37, 35, 35);
+    margin-bottom: 2%;
+    
+   
+  }
+
 .title{
+    /* display: flex;
+    flex-direction: column;
+    background-color: red; */
     font-size: 16px;
     font-weight: 700;
-    line-height: 19.2px;
+    /* line-height: 19.2px; */
     color: rgb(45, 47, 49);
+    height: 5vw;
 
 }
 
@@ -57,6 +73,7 @@
     font-weight: 400;
     line-height: 1.2px;
     color: rgb(45, 47, 49);
+    height: 2vw;
 }
 
 .price{
@@ -64,5 +81,12 @@
     font-weight: 700;
     line-height: 19.2px;
     color: rgb(45, 47, 49); 
+    height: 2vw;
+}
+
+.bigContinerDiv{
+    width: 100vw;
+    height: auto;
+    /* background-color: red; */
 }
 
