--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -4,7 +4,7 @@
 
 .subCategory{
     width: 100%;
-    height: 150vh;
+    height: 200vh;
 
 }
 
@@ -22,7 +22,23 @@
     gap: 1rem;
     /* background-color: rgb(136, 0, 255); */
     width: 100%;
-    height: 40%;
+    height: 100%;
+    
+}
+
+.Mainvideos3{
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    gap: 1rem;
+    background-color: rgba(0, 0, 0, 0.447);
+    margin-top: -5vh;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 7;
+    margin-left: -6.4%;
+    display: none;
 }
 
 .vidImage{
@@ -144,7 +160,7 @@
     height: 95%;
     padding: 2rem 5rem;
     /* background-color: palevioletred; */
-    overflow-x: hidden;
+   
 }
 
 .subsection1{
@@ -183,17 +199,22 @@
     height: 20vh;
     display: flex;
     flex-direction: column;
+    border: solid 1px grey;
     gap: 1rem;
+    padding: 2vw 0 2vw 3vw;
     /* background-color: red; */
     /* border: solid 1px grey; */
 }
 
 .sub4{
     width: 90%;
-    height: auto;
+    height: 80vh;
     display: flex;
     flex-direction: column;
+    border: solid 1px grey;
     gap: 1rem;
+    overflow-x: hidden;
+    padding: 2vw 0 2vw 3vw;
     /* background-color: red; */
     /* border: solid 1px grey; */
 }
@@ -292,7 +313,7 @@
 
 .subb2{
     width: 90%;
-    height: 6vh;
+    height: 20vh;
     /* background-color: aqua; */
     display: flex;
     flex-direction: column;
