--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -28,11 +28,13 @@
 
 .Mainvideos3{
     display: flex;
-    /* flex-direction: column; */
-    /* align-items: center; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 1rem;
     background-color: rgba(0, 0, 0, 0.447);
-    margin-top: -5vh;
+    /* background-color: brown; */
+    margin-top: -10vh;
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -41,9 +43,45 @@
     display: none;
 }
 
+.playvideo video{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.buttonPay{
+    width: 50%;
+    height: 10%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* background-color: red; */
+}
+
+.buttonPay span{
+    cursor: pointer;
+}
+
+.playvideo{
+    width: 70%;
+    height: 80%;
+    display: flex;
+    gap: 3%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+.videoPlayer{
+    width: 70%;
+    height: 85%;
+    /* background-color: rgb(49, 19, 104); */
+}
+
 .vidImage{
     width: 80%;
-    height: 80%;
+    height: 80vh;
 
 }
 
@@ -59,7 +97,7 @@
 
 .category{
     width: 100%;
-    height: 45%;
+    height: 30%;
     background-color: rgb(45,47,49);
     padding: 20px 80px 0 80px;
     color: white;
