--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -46,7 +46,12 @@
 .playvideo video{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 95%;
+}
+
+.status{
+    color: white;
+    height: 4%;
 }
 
 .buttonPay{
