--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -112,6 +112,30 @@
 }
 
 
+.btn-downloaded{
+    width: 13vw;
+    height: 3vw;
+    font-size: 1vw;
+    border: none;
+    border-radius: 1vw;
+    background-color: rgb(45,47,49);
+    color: white;
+    margin: 1vw auto;
+}
+
+.btn-downloaded1{
+    width: 13vw;
+    height: 3vw;
+    font-size: 1vw;
+    border: none;
+    border-radius: 1vw;
+    background-color: rgb(45,47,49);
+    color: white;
+    margin: 1vw auto;
+    
+}
+
+
 .category1{
     width: 65%;
     height: 15%;
