--- a/src/students.css
+++ b/src/students.css
@@ -3,6 +3,34 @@
     padding: 0;
 }
 
+.imageCon{
+    /* background-color: red; */
+    width: 10%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.imageCon img{
+    width: 90%;
+    height: 100%;
+    justify-content: space-evenly;
+}
+
+.main{
+    width: 90%;
+    /* background-color: blue; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+.menu{
+    display: none;
+}
+
 .headers{
     width: 100%;
     background-color: white;
@@ -43,7 +71,7 @@
 .search{
     width: 40%;
     padding-left: 10px;
-    height: 65%;
+    height: 80%;
     background-color: rgb(247,249,250);
     border-radius: 30px;
     border: solid 1.3px rgb(98,100,102);
@@ -113,3 +141,39 @@
     color: white;
     
 }
+
+/* Add this to your existing students.css */
+
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+    background-color: white; /* or your desired background */
+    position: absolute;
+    top: 13vh; /* Adjust this based on your header height */
+    left: 0;
+    width: 100%;
+    box-shadow: 0px 0.5px 10px 1px rgb(142, 139, 139);
+    z-index: 1000; /* Ensure it's on top of other elements */
+  }
+  
+  .mobile-menu .dropdown {
+    padding: 10px;
+    border-bottom: 1px solid #e0e0e0; /* Optional: add separation between items */
+  }
+  
+  @media (max-width: 768px) {
+    .main {
+      display: none;
+    }
+
+    .imageCon{
+        /* background-color: red; */
+        width: 30%;
+    }
+
+  
+    .menu {
+      display: block;
+    }
+  }
+  
