--- a/src/bigvideobox.css
+++ b/src/bigvideobox.css
@@ -57,11 +57,11 @@
   }
 
 .title{
-    /* display: flex;
-    flex-direction: column;
-    background-color: red; */
+    display: flex;
     font-size: 16px;
     font-weight: 700;
+    align-items: start;
+    justify-content: flex-start;
     /* line-height: 19.2px; */
     color: rgb(45, 47, 49);
     height: 5vw;
@@ -84,9 +84,77 @@
     height: 2vw;
 }
 
-.bigContinerDiv{
+.bigContainerDiv{
     width: 100vw;
     height: auto;
-    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    #Mainvideos2{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        
+    }
+
+    #Mainvideos3{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        
+    }
+
+    .videoImage video{
+        margin-bottom: 10px;
+    }
+    
+    .videoImage {
+        height: 50%; 
+        margin-bottom: 15px;
+        
+       
+      }
+
+
+    .videos{
+        width: 30%;
+        height: 23vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+    }
+
+    .title{
+        font-size: 8px;
+        font-weight: 500;
+        padding: 5px;
+    }
+
+    .authorName{
+        font-size: 7px;
+        line-height: 1.2px;
+        padding: 5px;
+        height: 3vw;        
+
+    }
+
+    .price{
+        font-size: 8px;
+        font-weight: 500;
+        padding: 5px;
+        height: 4vw; 
+        margin-top: -5px;
+        display: flex;
+        align-items: center; 
+    }
+
+    .videoHeadlines{
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 16.8px;
+    }
 }
 
