--- a/src/body1.css
+++ b/src/body1.css
@@ -112,3 +112,73 @@
     justify-content: first baseline;
     font-family: 'Times New Roman', Times, serif;
   }
+
+  @media (max-width: 768px) {
+    .whiteBox {
+      height: auto;
+      top: 40%;
+      left: 21%;
+      padding: 3px 10px;
+      transform: translate(-50%, -50%);
+    }
+
+    .you{
+      font-size: 10px;
+      font-weight: 500;
+      line-height: 16px;
+    }
+
+    .skills{
+      font-size: 8px;
+      line-height: 12px;
+    }
+
+    .body1 {
+      height: 18vh;
+    }
+
+    .dismis{
+      width: 96%;
+      height: auto;
+      padding-left: 10px;
+    
+    }
+
+    .training{
+      margin-top: 10px;
+      font-size: 10px;
+      font-weight: 500;
+      line-height: 16.2px;
+    }
+
+    .button1{
+      width: 75%;
+      font-size: 8px;
+      font-weight: 400;
+      line-height: 10.8px;
+      height: 80%;
+    }
+
+    .buttonBox{
+      width: 40%;
+      gap: 2px;
+    }
+
+    .button2{
+      font-size: 8px;
+      height: 70%;
+      font-weight: 400;
+      line-height: 10.8px;
+    }
+
+    .learn{
+      width: 100%;
+      height: 6vh;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 20px;
+      color: rgb(45, 47, 49);
+      padding: 10px 15px;
+    
+    }
+  }
