--- a/src/bigvideobox.css
+++ b/src/bigvideobox.css
@@ -14,7 +14,7 @@
     font-weight: 700;
     line-height: 40px;
     color: rgb(45, 47, 49);
-    padding: 20px 30px;
+    padding: 20px 0;
     display: flex;
     justify-content: first baseline;
     font-family: 'Times New Roman', Times, serif;
