--- a/src/Loginbody.css
+++ b/src/Loginbody.css
@@ -5,6 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 20vh;
+}
+#body{
+  margin-top: 8vh;
 }
 
 .inputBox{
