--- a/src/body1.css
+++ b/src/body1.css
@@ -182,3 +182,15 @@
     
     }
   }
+
+  @media (max-width:768px ) {
+    .body1{
+      margin-top: 10vh;
+    }
+  }
+
+  @media (max-width:380px ) {
+    .body1{
+      margin-top: 10vh;
+    }
+  }
