--- a/src/dashheader.css
+++ b/src/dashheader.css
@@ -12,6 +12,14 @@
     height: 100%;
 }
 
+#header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+  }
+
 .imageCon{
     /* background-color: red; */
     width: 10%;
