--- a/src/students.css
+++ b/src/students.css
@@ -31,6 +31,18 @@
     display: none;
 }
 
+/* students.css */
+#header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000; /* Ensures the header is on top of other elements */
+    background-color: white; /* Adjust this as needed */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: adds a shadow effect */
+  }
+  
+
 .headers{
     width: 100%;
     background-color: white;
