--- a/src/subheader.css
+++ b/src/subheader.css
@@ -3,10 +3,14 @@
     margin: 0;
 
 }
+/* students.css */
+
+  
 
 .subheader{
     width: 100%;
     height: 10vh;
+    margin-top: 13vh;
     background-color: white;
     box-shadow: 0px 0.5px 10px 1px rgb(62, 58, 58);
     display: flex;
