--- a/src/dashheader.css
+++ b/src/dashheader.css
@@ -12,6 +12,23 @@
     height: 100%;
 }
 
+#menu{
+    position: relative;
+}
+
+.menuitem{
+    position: absolute;
+    /* background-color: red; */
+    left: 80vw;
+    width: 20vw;
+    height: auto;
+    font-size: 7px;
+    line-height: 8px;
+    padding: 5px 10px;
+    border: solid 0.05px rgb(135, 137, 138);
+    top: 10vh;
+}
+
 #header {
     position: fixed;
     top: 0;
@@ -78,6 +95,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.cart1{
+    /* background-color: red; */
+    font-size: 5px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    /* justify-content: center; */
+}
+
+.cart1 span{
+    /* background-color: red; */
+    font-size: 10px;
+    font-weight: 400;
+    /* justify-content: center; */
 }
 
 .search{
