--- a/src/dashheader.css
+++ b/src/dashheader.css
@@ -18,7 +18,7 @@
 
 .menuitem{
     position: absolute;
-    /* background-color: red; */
+    background-color: white;
     left: 80vw;
     width: 20vw;
     height: auto;
