--- a/src/admidash.css
+++ b/src/admidash.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .postVideos{
     margin-top: 10vh;
     width: 100%;
@@ -8,6 +12,13 @@
     flex-direction: column;
     gap: 1rem;
 }
+form{
+    margin-bottom: 10vh;
+}
+
+form p{
+    margin-top: 3vw;
+}
 
 .postVideos input{
     width: 50%;
@@ -16,13 +27,85 @@
 
 .Mainvideo{
     display: flex;
-    /* align-items: center; */
     gap: 1rem;
-    /* background-color: aqua; */
     width: 100%;
-    height: 100%;
+    height: auto;
+}
+
+#carrier3{
+    width: 100%;
+    height: auto;
 }
 
 #textarea{
     padding: 50px;
+}
+
+@media (max-width: 768px) {
+
+    .Mainvideo{
+        /* background-color: plum; */
+        flex-wrap: wrap;
+    }
+
+    .postVideos input{
+        width: 70%;
+        height: 30px;
+    }
+
+    .videoItem{
+        /* background-color: red; */
+        margin-bottom: 3vh;
+        display: flex;
+        flex-direction: column;
+        margin-top: 1vh;
+        width: 100%;
+    }
+
+    #videoItem{
+        height: 35vh;
+        gap: 0.5rem;
+        /* background-color: blueviolet; */
+        border: solid 0.5px black;
+    }
+
+    .videoItem video{
+        height: 60%;
+        margin-bottom: 0.5rem;
+    }
+    #edit{
+        margin-top: 1vh;
+        background-color: hotpink;
+    }
+    .title{
+        height: 18%;
+    }
+
+    #videos{
+        width: 47%;
+        height: auto;
+        padding-bottom: 1rem;
+        background-color: rgb(251, 248, 250);
+    }
+
+    .videos button{
+        font-size: 10px;
+        width: 80%;
+        height: 30px;
+        margin: 0 auto;
+        border: none;
+        background-color: black;
+        color: white;
+        border-radius: 5px;
+    }
+  
+    #textarea{
+        width: 95%;
+        height: auto;
+        /* background-color: red; */
+    }
+
+    form{
+        margin-bottom: 5vh;
+    }
 }
