--- a/src/bigvideobox.css
+++ b/src/bigvideobox.css
@@ -38,6 +38,16 @@
    justify-content: space-between;
 }
 
+.videoBox1 {
+    width: 100%;
+    height: 80%;
+    padding: 30px 50px;
+    /* background-color: rgb(128, 0, 255); */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .videoHeadlines{
     font-size: 24px;
     font-weight: 700;
