--- a/src/Loginbody.css
+++ b/src/Loginbody.css
@@ -8,6 +8,22 @@
     margin-top: 20vh;
 }
 
+.password-container {
+  position: relative;
+}
+
+.password-container input {
+  padding-right: 30px;
+  /* Adjust to make space for the icon */
+}
+
+.password-toggle {
+  position: absolute;
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 *{
   padding: 0;
   margin: 0;
