--- a/src/Loginbody.css
+++ b/src/Loginbody.css
@@ -51,7 +51,8 @@
   background-color: rgb(225, 225, 237);
 }
 
-.carrier input[type="text"]{
+.carrier input[type="text"],
+.carrier input[type="password"]{
     width: 90%;
     height: 8vh;
     padding: 0 20px 0 20px;
@@ -62,6 +63,8 @@
     
  
 }
+
+
 
 .others{
     width: 90%;
