--- a/src/dashheader.css
+++ b/src/dashheader.css
@@ -12,6 +12,18 @@
     height: 100%;
 }
 
+.carried {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    /* position: relative; */
+    width: 25%;
+    gap: 1rem;
+    left: 0%;
+    background-color: red;
+
+}
+
 #menu{
     position: relative;
 }
@@ -70,17 +82,15 @@
     height: 45%;
 }
 
-.dropdown{
+.dropDown{
     /* background-color: aqua; */
     height: 50%;
-    margin-top: 15px;
-    position: absolute;
     Font-size: 14px;
     Font-weight: 400;   
     Line-height: 19.6px;
 }
 
-.dropdownContent{
+.dropDownContent{
     background-color: red;
     margin-top: 30px;
     display: none;
