--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -512,6 +512,12 @@
         /* background-color: red; */
       
     }
+
+        .videocon {
+            padding: 5px 0;
+            height: auto;
+            /* background-color: aqua; */
+        }
         #subbtext {
             font-size: 10px;
         }
@@ -536,7 +542,6 @@
          }
 
     .title{
-       font-size: 6px;
        margin-top: 2px;
         gap: 1rem;
     }
@@ -622,6 +627,10 @@
     .category3 h6{
        font-size: 10px;
       
+    }
+
+   #sub2 {
+      height: auto;
     }
 
     .time{
@@ -729,6 +738,7 @@
     height: auto;
 }
 .sub2{
+    padding: 5px 0;
     height: auto;
 }
 
@@ -744,7 +754,7 @@
 }
 
 .sub2 h4{
-    font-size: 13px;
+    font-size: 10px;
 }
 
 #span1{
