--- a/src/Loginbody.css
+++ b/src/Loginbody.css
@@ -12,16 +12,14 @@
   position: relative;
 }
 
-.password-container input {
-  padding-right: 30px;
-  /* Adjust to make space for the icon */
-}
+
 
 .password-toggle {
   position: absolute;
   right: 50px;
   top: 50%;
   transform: translateY(-50%);
+  font-size: 16px;
 }
 
 *{
@@ -334,4 +332,6 @@
     .buttonSignin{
       height: 5vh;
     }
+
+     
   }
