--- a/src/Loginbody.css
+++ b/src/Loginbody.css
@@ -1,18 +1,16 @@
-.body{
-    width: 100%;
-    height: 105vh;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20vh;
+.body {
+  width: 100%;
+  height: 105vh;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20vh;
 }
 
 .password-container {
   position: relative;
 }
-
-
 
 .password-toggle {
   position: absolute;
@@ -22,316 +20,293 @@
   font-size: 16px;
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
 }
-#body{
+#body {
   margin-top: 15vh;
 }
 
-.inputBox{
-    width: 35%;
-    height: 100%;
-    /* background-color: blue; */
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding: 30px ;
-    Font-size: 16px;
-    Font-weight: 700;
-    Line-height: 19.2px;
-    color: rgb(45, 47, 49);
-    gap: 0.5rem;
+.inputBox {
+  width: 35%;
+  height: 100%;
+  /* background-color: blue; */
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 30px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19.2px;
+  color: rgb(45, 47, 49);
+  gap: 0.5rem;
 }
 
-.others:hover{
+.others:hover {
   background-color: rgb(225, 225, 237);
 }
 
 .carrier input[type="text"],
-.carrier input[type="password"]{
-    width: 90%;
-    height: 8vh;
-    padding: 0 20px 0 20px;
-    border: solid 1.1px black;
-    Font-size: 14px;
-    Font-weight: 700;
-    Line-height: 19.2px;
-    
- 
+.carrier input[type="password"] {
+  width: 90%;
+  height: 8vh;
+  padding: 0 20px 0 20px;
+  border: solid 1.1px black;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19.2px;
 }
 
-
-
-.others{
-    width: 90%;
-    height: 10%;
-    padding: 0 20px 0 20px;
-    border: solid 1.1px black;
-    display: flex;
-    align-items: center;
-    /* background-color: red; */
+.others {
+  width: 90%;
+  height: 10%;
+  padding: 0 20px 0 20px;
+  border: solid 1.1px black;
+  display: flex;
+  align-items: center;
+  /* background-color: red; */
 }
 
-
-
-.inputBox input[type="text"]::placeholder{
-    color: rgb(45, 47, 49);
+.inputBox input[type="text"]::placeholder {
+  color: rgb(45, 47, 49);
 }
 
-.lineBox{
-    width: 60%;
-    /* background-color: red; */
-    height: 2%;
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
+.lineBox {
+  width: 60%;
+  /* background-color: red; */
+  height: 2%;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
 }
 
-.lines{
-    width: 20%;
-    height: 50%;
-    border-radius: 5px;
-    background-color: rgb(209,215,220);
+.lines {
+  width: 20%;
+  height: 50%;
+  border-radius: 5px;
+  background-color: rgb(209, 215, 220);
 }
 
-.checkContainer{
-    width: 80%;
-    height: 10%;
-    gap: 1rem;
-    display: flex;
-    align-items: start;
-    Font-size: 13.5px;
-    Font-weight: 500;
-    Line-height: 19.6px;
-    /* background-color: red; */
-    color: rgb(45, 47, 49);
+.checkContainer {
+  width: 80%;
+  height: 10%;
+  gap: 1rem;
+  display: flex;
+  align-items: start;
+  font-size: 13.5px;
+  font-weight: 500;
+  line-height: 19.6px;
+  /* background-color: red; */
+  color: rgb(45, 47, 49);
 }
 
-.checkContainer input{
-    width: 25px;
-    height: 25px;
-    border: solid black;
-    border-radius: none;
+.checkContainer input {
+  width: 25px;
+  height: 25px;
+  border: solid black;
+  border-radius: none;
 }
 
 .checkContainer input[type="checkbox"]:checked {
-    background-color:black;
-  }
+  background-color: black;
+}
 
-  .buttonSignin{
-    width: 90%;
-    height: 8vh;
-    background-color: rgb(164,53,240);
-    border: none;
-    color: white;
-    font-size: 16px;
-    font-weight: 700;
-  }
+.buttonSignin {
+  width: 90%;
+  height: 8vh;
+  background-color: rgb(164, 53, 240);
+  border: none;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+}
 
-  .termsBox{
-    width: 90%;
-    height: 6vh;
-    margin-bottom: 5vh;
-    /* background-color: aqua; */
-    border-bottom: solid 2px rgb(236,239,241);
-    display: flex;
-    justify-content: center;
-    Font-size: 14px;
-    Font-weight: 400;
-    Line-height: 16.8px;
-    color: rgb(45, 47, 49);
-  }
+.termsBox {
+  width: 90%;
+  height: 6vh;
+  margin-bottom: 5vh;
+  /* background-color: aqua; */
+  border-bottom: solid 2px rgb(236, 239, 241);
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.8px;
+  color: rgb(45, 47, 49);
+}
 
-  .termsBox span{
-    text-decoration: underline;
-    Font-size: 15px;
-    Font-weight: 700;
-    Line-height: 16.8px;
-    color: rgb(86,36,208);
+.termsBox span {
+  text-decoration: underline;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 16.8px;
+  color: rgb(86, 36, 208);
+}
 
-  }
+.small1 {
+  width: 80%;
+  height: 100%;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 0;
+  color: rgb(45, 47, 49);
+}
 
-  .small1{
-    width: 80%;
-    height: 100%;
-    Font-size: 1rem;
-    Font-weight: 700;
-    Line-height: 0;
-    color: rgb(45, 47, 49);
-    
-  }
+#google {
+  width: 4vw;
+  height: auto;
+}
 
- 
+.loginBox {
+  width: 90%;
+  height: 8%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  /* background-color: aqua; */
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19.8px;
+  color: rgb(45, 47, 49);
+}
 
-  
-
-  #google{
-    width: 4vw;
-    height: auto;
-  }
-
-
-
-  .loginBox{
-    width: 90%;
-    height: 8%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    /* background-color: aqua; */
-    Font-size: 14px;
-    Font-weight: 400;
-    Line-height: 19.8px;
-    color: rgb(45, 47, 49);
-    
-  }
-
-  /* .loginBox p{
+/* .loginBox p{
     width: 70%;
   } */
 
-  .loginBox span{
-    Font-size: 15px;
-    Font-weight: 700;
-    Line-height: 16.8px;
-    color: rgb(86,36,208);
-    text-decoration: underline;
-   
-  }
+.loginBox span {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 16.8px;
+  color: rgb(86, 36, 208);
+  text-decoration: underline;
+}
 
-  .carrier{
-    width: 100%;
-    height: auto;
+.carrier {
+  width: 100%;
+  height: auto;
+  /* background-color: red; */
+}
+
+.carrier1 {
+  width: 100%;
+  height: auto;
+  /* background-color: red; */
+}
+
+@media (max-width: 380px) {
+  .body {
     /* background-color: red; */
+    height: 130vh;
   }
 
-  .carrier1{
-    width: 100%;
-    height: auto;
+  .checkContainer input {
+    width: 10px;
+    height: 10px;
+  }
+
+  .checkContainer {
+    font-size: 9.5px;
+    font-weight: 500;
+    line-height: 9.6px;
+    height: 5%;
+    display: flex;
+    align-items: center;
     /* background-color: red; */
+    color: rgb(45, 47, 49);
   }
 
-  @media (max-width: 380px) {
-      .body{
-        /* background-color: red; */
-        height: 130vh;
-      }
-
-      .checkContainer input{
-        width: 10px;
-        height: 10px;
-      }
-
-      .checkContainer{
-        Font-size: 7.5px;
-        Font-weight: 500;
-        Line-height: 9.6px;
-        height: 5%;
-        display: flex;
-        align-items: center;
-        /* background-color: red; */
-        color: rgb(45, 47, 49);
-    }
-
-      .carrier1{
-        width: 100%;
-        height: 20vh;
-      }
-
-      #google{
-        width: 18px;
-        height: auto;
-      }
-
-      .checkContainer{
-        background-color: rgb(10, 82, 58);
-      }
-
-      #inputBox{
-        height: 100%;
-      }
-
-      .buttonSignin{
-        height: 5vh;
-      }
-
-      .termsBox{
-       display: none;
-      }
-
-     
-
-
-      .carrier input[type="text"]{
-        height: 6vh;
-        /* background-color: black; */
-        padding: 0 10px 0 10px;
-        Font-size: 10px;
-        Font-weight: 500;
-        Line-height: 10.2px;
-        
-     
-    }
+  .carrier1 {
+    width: 100%;
+    height: 20vh;
   }
 
-  @media (max-width: 768px) {
-    #body{
-      margin-top: 10vh;
-      height: 70vh;
-    }
-
-    .carrier input[type="text"]{
-      height: 6vh;
-      /* background-color: black; */
-      padding: 0 10px 0 10px;
-      Font-size: 12px;
-      Font-weight: 500;
-      Line-height: 10.2px;
-      
-   
+  #google {
+    width: 18px;
+    height: auto;
   }
 
-  .small1{
+  .checkContainer {
+    background-color: rgb(10, 82, 58);
+  }
+
+  #inputBox {
+    height: 100%;
+  }
+
+     #inputBox p{
+       height: 12px;
+     }
+
+  .buttonSignin {
+    height: 5vh;
+  }
+
+  .termsBox {
+    display: none;
+  }
+
+  .carrier input[type="text"],
+  .carrier input[type="password"] {
+    height: 6vh;
+    padding: 0 10px;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 10.2px;
+  }
+}
+
+@media (max-width: 768px) {
+  #body {
+    margin-top: 10vh;
+    height: 70vh;
+  }
+
+  .carrier input[type="text"],
+  .carrier input[type="password"] {
+    height: 6vh;
+    padding: 0 10px;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 10.2px;
+  }
+  .small1 {
     padding-top: 7px;
-    Font-size: 0.65rem;
+    font-size: 0.65rem;
     margin-left: 8px;
-    
   }
 
-    .checkContainer{
-      Font-size: 10.5px;
-      Font-weight: 500;
-      Line-height: 9.6px;
-      height: 5%;
-      /* background-color: red; */
-      color: rgb(45, 47, 49);
+  .checkContainer {
+    font-size: 10.5px;
+    font-weight: 500;
+    line-height: 9.6px;
+    height: 5%;
+    /* background-color: red; */
+    color: rgb(45, 47, 49);
   }
 
-    .carrier1{
-      width: 100%;
-      height: 15vh;
-      margin-top: 2vh;
-    }
-
-    #inputBox{
-      /* background-color: red; */
-      width: 90%;
-    }
-
-    #loginBox{
-      margin-top: 0.5rem;
-    }
-
-    .termsBox{
-      height: 3vh;
-    }
-
-    .buttonSignin{
-      height: 5vh;
-    }
-
-     
+  .carrier1 {
+    width: 100%;
+    height: 15vh;
+    margin-top: 2vh;
   }
+
+  #inputBox {
+    /* background-color: red; */
+    width: 90%;
+  }
+
+  #loginBox {
+    margin-top: 0.5rem;
+  }
+
+  .termsBox {
+    height: 3vh;
+  }
+
+  .buttonSignin {
+    height: 5vh;
+  }
+}
