--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -519,7 +519,8 @@
         }
 
         .videocon {
-            padding: 5px 0;
+            padding: 0;
+            margin: 0;
             height: auto;
             /* background-color: aqua; */
         }
@@ -760,7 +761,7 @@
 }
 
 .sub2 h4{
-    font-size: 10px;
+    font-size: 12px;
 }
 
 #span1{
