--- a/src/certificate.css
+++ b/src/certificate.css
@@ -43,9 +43,9 @@ img {
         padding: 20px;
     }
 
-    h2 {
+    /* h2 {
         font-size: 0.5rem;
-    }
+    } */
 
     #myP {
         font-size: 0.5rem;
